--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "CommonJS",
     "target": "es6",
     "importHelpers": true,
+    "strictNullChecks": true,
     "esModuleInterop": true
   }
 }
