--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+dist
 
 # Created by https://www.gitignore.io/api/node,linux,macos,windows,webstorm,sublimetext,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,linux,macos,windows,webstorm,sublimetext,visualstudiocode
@@ -123,7 +124,7 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby 
+# react / gatsby
 public/
 
 # vuepress build output
