--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "server": "nodemon -r source-map-support/register dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,17 @@
   "homepage": "https://github.com/open-kanban/open-kanban-api#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.7.4",
+    "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.2",
     "@types/faker": "^4.1.8",
     "@types/jest": "^24.0.23",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/lodash": "^4.14.149",
+    "@types/mongodb": "^3.3.12",
+    "@types/mongoose": "^5.5.34",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -31,13 +39,28 @@
     "eslint": "^6.7.2",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
+    "jest-mock-extended": "^1.0.5",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "prettier-tslint": "^0.4.2",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.7.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-node-externals": "^1.7.2",
+    "source-map-support": "^0.5.16"
   },
   "dependencies": {
-    "cuid": "^2.1.6"
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
+    "cuid": "^2.1.6",
+    "email-validator": "^2.0.4",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongodb": "^3.3.5",
+    "mongoose": "^5.8.1",
+    "multer": "^1.4.2"
   }
 }
