refactor: add eslint fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,10 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "@typescript-eslint/no-use-before-define": "off"
+  }
 }
