--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@types/mongodb": "^3.3.12",
     "@types/mongoose": "^5.5.34",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
     "jest-mock-extended": "^1.0.5",
@@ -46,12 +46,12 @@
     "prettier": "^1.19.1",
     "prettier-tslint": "^0.4.2",
     "source-map-loader": "^0.2.4",
+    "source-map-support": "^0.5.16",
     "typescript": "^3.7.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-node-externals": "^1.7.2",
-    "source-map-support": "^0.5.16"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
